Correction d'un alignement

--- a/laplateforme.css
+++ b/laplateforme.css
@@ -77,6 +77,7 @@ header{
 
 .hero_header{
     display: flex;
+    width:100%;
     height: 795px;
 /*    background-color:yellow; */
     padding-bottom: 27px;
@@ -86,15 +87,12 @@ header{
     display: flex;
     background-color:#336699;
     width: 50%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 10%;
-    padding-right: 10%;
 }
 
 .hero_right{
     display: flex;
     height: 795px;
+    width: 50%;
 }
 
 #hero_image{
@@ -105,6 +103,10 @@ header{
 .hero_left_text{
     display: flex;
     flex-direction: column;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 10%;
+    padding-right: 10%;
     background-color: #336699;
     justify-content: center;
     font-size:25px;
@@ -128,6 +130,7 @@ header{
     display:flex;
     font-family:"Roboto Slab";
     text-align: center;
+    align-self:center;
     margin-left: 5px;
     margin-right: 5px;
 }
